Update "How do I enroll..."

--- a/academy-faq.html
+++ b/academy-faq.html
@@ -14,14 +14,15 @@ permalink: /academies/faq/
   <li>A demonstrated need for employees within the Career Cluster.</li>
   <li>An advisory board consisting of business leaders in the Career Cluster.</li>
   <li>Adherence to specific rules established by the school system.</li>
-  <li>What are the benefits of joining a Career Academy?</li>
 </ul>
+
+<h2>What are the benefits of joining a Career Academy?</h2>
 
 <p>Students participating in a Career Academy have a clear path for graduation. Each academy meets all graduation requirements and prepares students for post-secondary education and/or the world of work. While in the academy, students have an opportunity to participate in special activities and events that provide greater awareness of the specific career area and opportunities within that area. Academy participants will be part of a small group of students with similar interests completing courses together. An advisor and business mentor will be provided to answer questions and help each student as they complete their high school experience. Students completing the requirements for the academy will receive a certificate and student transcripts will also identify the student as an academy completer.</p>
 
-<h2>How do I become a member of a Career Academy?</h2>
+<h2>How do I enroll in a Career Academy?</h2>
 
-<p>Any student may be part of a single Career Academy. To become a member of an academy, simply complete a declaration form available in all guidance offices. Students may join one academy up to the end of tenth grade, as long as all applicable prerequisites are met. After the form is submitted, the student will receive a welcome letter and an appointment with a guidance counselor to develop or revise the student's four-year plan so that the student will be able to successfully complete all requirements listed in this catalog for the Career Academy.</p>
+<p>To become a member of an academy, students will meet with their school counselor to discuss which academy best matches their college and career goals. Students can enroll during the high school course registration period.  When completing the registration form for the upcoming school year, students will indicate the name of the Career Academy on the portion of the form that asks for their intended program choice. School counselors help students create a four-year plan so that they can successfully complete all requirements for the Career Academy.</p>
 
 <h2>Where are the Career Academies located?</h2>
 
