Add overview videos
And fix typos.

--- a/college-credits.html
+++ b/college-credits.html
@@ -4,6 +4,8 @@ title: Earning College Credit at a Career Academy
 permalink: /academies/college-credit/
 ---
 
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/144636171' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+
 <p>Career Academy programs are designed to prepare high school students to be college and career ready and to meet the demands of the 21st century global economy and are closely aligned with regional economic and work-force development priorities.  These academies help students in making informed decisions as they explore careers and post secondary education options during high school. Career Academy programs are organized around the approved Maryland CTE Career Clusters.</p>
 
 <p>Career Academy students are eligible to earn college credits, advanced standing, and/or satisfy college requirements while in high school. These articulated college agreements enable students to make a smooth transition from high school to a post secondary institution without experiencing duplication of courses or loss of credit. These articulation agreements ensure rewarding experiences leading to preparation for post secondary education and/or the world of work.</p>
