Update contact information

--- a/academies.html
+++ b/academies.html
@@ -134,11 +134,12 @@ permalink: /academies/
   </div>
 
   <div class="contents">
-    <div class="col-left">
       <h2>Contact</h2>
-      <p>Program Coordinator - 410-313-5640</p>
       <ul>
-        <li>School and Program Contact Information</li>
+        <li><a href="mailto:sharon_kramer@hcpss.org">Sharon Kramer</a>, Coordinator - 410-313-6797</li>
+        <li><a href="mailto:natalie_belcher@hcpss.org">Natalie Belcher</a>, Instructional Facilitator, Centralized Career Academies - 410-313-6797</li>
+        <li><a href="mailto:mary_metzler@hcpss.org">Mary Metzler</a>, Resource Teacher, Technology Education - 410-313-6797</li>
+        <li><a href="mailto:stephanie_discepolo@hcpss.org">Stephanie Discepolo</a>, Resource Teacher, Career &amp; Technology Education - 410-313-6797</li>
+        <li><a href="mailto:sally_long@hcpss.org">Sally Long</a>, CTE Secretary - 410-313-6797</li>
       </ul>
-    </div>
   </div>
