Add articulation agreements

--- a/college-credits.html
+++ b/college-credits.html
@@ -14,7 +14,7 @@ permalink: /academies/college-credit/
 
 <h3>Howard County Community College</h3>
 <ul>
-	<li><a href="http://www2.hcpss.org/cte/documents/Artic2015.pdf">View Current Agreements</a></li>
+	<li><a href="/img/academies-hcc-articulation-agreements.pdf">View Current Agreements</a></li>
 </ul>
 
 <p><strong>General Information</strong></p>
@@ -24,6 +24,10 @@ Students may receive credit for articulated high school courses by submitting an
 <p>For more information, please see your school's guidance counselor.</p>
 
 <h3>Additional Articulation Agreements</h3>
+
+<ul>
+	<li><a href="/img/academies-other-articulation-agreements.pdf">View Other Agreements</a></li>
+</ul>
 
 <ul>
   <li>Anne Arundel Community College (AACC)</li>
