Reference resources paths to use SSL

--- a/electives.html
+++ b/electives.html
@@ -40,7 +40,7 @@ permalink: /academies/electives/
   <li>Use basic sewing skills to create community service projects such as mini-quilts for children facing hospital stays, warm winter hats for homeless individuals, book bags and stuffed animals for foster children</li>
 </ul>
 
-<p><a href="http://www.hcpss.org/f/academics/docs_gr6facsesscurr.pdf">View full curriculum</a></p>
+<p><a href="https://www.hcpss.org/f/academics/docs_gr6facsesscurr.pdf">View full curriculum</a></p>
 
 <p><strong>Seventh Grade</strong></p>
 
@@ -52,7 +52,7 @@ permalink: /academies/electives/
   <li>Understand how career choice, education, and consumer choices, and budget management create financial security</li>
 </ul>
 
-<p><a href="http://www.hcpss.org/f/academics/docs_gr7facsesscurr.pdf">View full curriculum</a></p>
+<p><a href="https://www.hcpss.org/f/academics/docs_gr7facsesscurr.pdf">View full curriculum</a></p>
 
 <p><strong>Eighth Grade</strong></p>
 
@@ -65,7 +65,7 @@ permalink: /academies/electives/
   <li>Explore career options related to the field of Family and Consumer Sciences</li>
 </ul>
 
-<p><a href="http://www.hcpss.org/f/academics/docs_gr8facsesscurr.pdf">View full curriculum</a></p>
+<p><a href="https://www.hcpss.org/f/academics/docs_gr8facsesscurr.pdf">View full curriculum</a></p>
 
 <h3>High School Family and Consumer Sciences</h3>
 
@@ -99,9 +99,9 @@ permalink: /academies/electives/
 
 <p><strong>Essential Curriculum</strong></p>
 <ul>
-	<li><a href="http://www.hcpss.org/f/academics/docs_gr6techedfacsesscurr.pdf">Grade 6</a></li>
-	<li><a href="http://www.hcpss.org/f/academics/docs_gr7techedfacsesscurr.pdf">Grade 7</a></li>
-	<li><a href="http://www.hcpss.org/f/academics/docs_gr8techedfacsesscurr.pdf">Grade 8</a></li>
+	<li><a href="https://www.hcpss.org/f/academics/docs_gr6techedfacsesscurr.pdf">Grade 6</a></li>
+	<li><a href="https://www.hcpss.org/f/academics/docs_gr7techedfacsesscurr.pdf">Grade 7</a></li>
+	<li><a href="https://www.hcpss.org/f/academics/docs_gr8techedfacsesscurr.pdf">Grade 8</a></li>
 </ul>
 
 <h3>High School</h3>
@@ -114,14 +114,14 @@ permalink: /academies/electives/
 <ul>
 <li>Advanced Design Applications</li>
 <li>Advanced Technological Applications</li>
-<li><a href="http://www.hcpss.org/f/academics/docs_pltwcompintemanugt.pdf">Computer Integrated Manufacturing (Project Lead The Way) - G/T</a></li>
+<li><a href="https://www.hcpss.org/f/academics/docs_pltwcompintemanugt.pdf">Computer Integrated Manufacturing (Project Lead The Way) - G/T</a></li>
 <li>Designing Technology Solutions</li>
-<li><a href="http://www.hcpss.org/f/academics/docs_pltwdigielectronicsgt.pdf">Digital Electronics (Project Lead The Way) - G/T</a></li>
+<li><a href="https://www.hcpss.org/f/academics/docs_pltwdigielectronicsgt.pdf">Digital Electronics (Project Lead The Way) - G/T</a></li>
 <li>Engineering Design</li>
-<li><a href="http://www.hcpss.org/f/academics/docs_pltwengindesdevgt.pdf">Engineering Design and Development (Project Lead The Way) - G/T</a></li>
+<li><a href="https://www.hcpss.org/f/academics/docs_pltwengindesdevgt.pdf">Engineering Design and Development (Project Lead The Way) - G/T</a></li>
 <li>Foundations of Technology</li>
-<li><a href="http://www.hcpss.org/f/academics/docs_pltwintroengindes.pdf">Introduction to Engineering Design (Project Lead The Way)</a></li>
-<li><a href="http://www.hcpss.org/f/academics/docs_pltwprinsenginoutline.pdf">Principles of Engineering (Project Lead The Way)</a></li>
+<li><a href="https://www.hcpss.org/f/academics/docs_pltwintroengindes.pdf">Introduction to Engineering Design (Project Lead The Way)</a></li>
+<li><a href="https://www.hcpss.org/f/academics/docs_pltwprinsenginoutline.pdf">Principles of Engineering (Project Lead The Way)</a></li>
 </ul>
 
 <h3>Contact</h3>
