--- a/academies.html
+++ b/academies.html
@@ -164,6 +164,6 @@ permalink: /academies/
         <li><a href="mailto:natalie_belcher@hcpss.org">Natalie Belcher</a>, Instructional Facilitator, Centralized Career Academies - 410-313-6797</li>
         <li><a href="mailto:mary_metzler@hcpss.org">Mary Metzler</a>, Resource Teacher, Technology Education - 410-313-6797</li>
         <li><a href="mailto:stephanie_discepolo@hcpss.org">Stephanie Discepolo</a>, Resource Teacher, Career &amp; Technology Education - 410-313-6797</li>
-        <li><a href="mailto:sally_long@hcpss.org">Sally Long</a>, CTE Secretary - 410-313-6797</li>
+        <li><a href="mailto:matthew_berkowitz@hcpss.org">Matt Berkowitz</a>, Technical Assistant - CTE and Dual Enrollment Programs - 410-313-6629</li>
       </ul>
   </div>
