Remove Hotel and Restaurant Management Academy

--- a/electives.html
+++ b/electives.html
@@ -71,13 +71,13 @@ permalink: /academies/electives/
 
 <p>High School students can</p>
 <ul>
-  <li>Explore options and prepare for professional careers in Child Development, Teaching, the Culinary Sciences, and Hotel and Restaurant Management.</li>
+  <li>Explore options and prepare for professional careers in Child Development, Teaching, and the Culinary Sciences.</li>
   <li>Explore an interest in Fashion and Interior Design and satisfy the Fine Arts graduation requirement by enrolling in Foundations of Fashion and Interior Design, 6556.</li>
 </ul>
 
 <p>Family and Consumer Sciences is an interdisciplinary study providing students hands-on activities to develop the technical, critical thinking, problem solving, decision-making and interpersonal skills that will empower them to manage the challenges of living and working in a diverse society. </p>
 
-<p>Four high school Career Academy Programs are offered under Family and Consumer Sciences: Child Development, Culinary Sciences, Hotel and Restaurant Management, and the Teacher Academy of Maryland (TAM).  Students in these academies have the opportunity to explore career options in these fields, prepare for college and receive college credit for coursework completed in high school, gain hands-on experience through internships and mentorships, and participate in special activities and events including field trips, competitions, and conferences.</p>
+<p>Three high school Career Academy Programs are offered under Family and Consumer Sciences: Child Development, Culinary Sciences, and the Teacher Academy of Maryland (TAM).  Students in these academies have the opportunity to explore career options in these fields, prepare for college and receive college credit for coursework completed in high school, gain hands-on experience through internships and mentorships, and participate in special activities and events including field trips, competitions, and conferences.</p>
 
 <h2 id="tech-ed">Technology Education</h2>
 
